# super-browser-user

./: .coverage  .env.example  CLAUDE.md  GROWTH_ANALYZER_ARCHITECTURE.md  MVP_GUIDE.md  MVP_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKREF.md  README.md  README.old.md  TEST_REPORT.md  TRAVEL_PLANNER_ARCHITECTURE.md  VALIDATION_REPORT.md  collect_guides.py  coverage.json  create_test_data.py  llms-full.txt  pyproject.toml  pytest.ini  requirements.txt  run_mvp.py  test_quickstart.py  web_app.py  xiaohongshu_collector.py  文档说明.md
apps/api/: main.py
apps/api/routers/: __init__.py  guide.py  health.py  travel.py
apps/cli/: __init__.py  main.py
collected_posts/batch_20251002_171833/: posts_list.json  scout_report.json
collected_posts/batch_20251002_172157/: scout_report.json
collected_posts/batch_20251002_190930/: post_1.json  post_2.json  post_3.json  posts_list.json  scout_report.json  summary.json
collected_posts_optimized/batch_20251002_011509/: post_1.json  post_2.json  post_3.json  posts_list.json  scout_report.json  summary.json
data/plans/: test_plan_001.json
data/posts/: test_001.json  test_002.json  test_003.json
docs/01-planning/: ARCHITECTURE.md
docs/api/: API_DESIGN.md  API_REFERENCE.md
docs/architecture/: ARCHITECTURE.md
docs/development/: SETUP.md
examples/: basic_usage.py  complete_workflow.py
scripts/: verify_project.py
src/: __init__.py
src/core/: __init__.py
src/core/domain/: __init__.py
src/shared/: __init__.py  constants.py  exceptions.py  types.py
src/storage/: local_storage.py
src/super_browser_user.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: home.html  plan_detail.html  plans.html  post_detail.html  posts.html
(+18 files in other folders)
