[project]
name = "super-browser-user"
version = "0.1.0"
description = "AI驱动的浏览器自动化工具集"
authors = [
    {name = "Shiyuan Chen", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # 数据采集
    "browser-use>=0.1.0",
    "playwright>=1.40.0",
    "httpx>=0.26.0",

    # AI
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.3.0",

    # 数据库
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # 缓存和队列
    "redis>=5.0.1",
    "celery>=5.3.6",

    # 数据处理
    "pandas>=2.1.4",
    "numpy>=1.26.3",

    # 工具
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
super-browser = "apps.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
